# GSSI_Numerical_Methods_2020-2021

./: .gitignore  CMakeLists.txt  LICENSE  README.md
output/simpson_integration/: simpson_approximation_errors.txt
pyplots/: Error_plotter.py  NumericalMethods.mplstyle  error_plotter.py
pyplots/ODE/: ODEPlotter.py  PendulumPlotter.py
pyplots/PDE/: PDEPlotter.py
pyplots/simpson_integration/: error_plotter.py  error_plotter_v1.py
src/: main.cpp
src/ODE/: ODE.cpp
src/PDE/: PDE.cpp
src/simpson_integration/: simpson_integration.cpp  simpson_integration_v1.cpp
test/ODE/: rk2Test.txt  test.cpp  testPlotter.py
